Fri Feb 19 02:43:11 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* login.c (main): When transitioning from no UID's to having UID's
	create a new session like normal.  Reported by Mark M. Kettenis
	<kettenis@wins.uva.nl>. 

1999-02-06  Mark Kettenis  <kettenis@gnu.org>

	* login.c (main): If no effective uid, really use first auxiliary
	uid to use as password entry to get parameters from.
	
1999-01-03  Roland McGrath  <roland@baalperazim.frob.com>

	* syncfs.c: Replace -a/--asynchronous with -s/--synchronous.
	Default is now asynchronous.

1998-12-31  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (SRCS, targets, targets rule): Rename sync to syncfs.
	* syncfs.c: Renamed from sync.c.
	Take flags -a/--asynchronous and -c/--no-children,
	and optional file arguments.  Diagnose errors.

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (OBJS): Use % pattern instead of explicit list.

	* parse.c (parse_enum): Add braces to silence gcc warning.
	* psout.c (psout): Likewise.
	* settrans.c (main): Likewise.
	* showtrans.c (main): Likewise.
	* w.c (w_fetch): Likewise.
	* vminfo.c (main): Likewise.

1998-09-05  Roland McGrath  <roland@baalperazim.frob.com>

	* ping.c: <linux/icmp.h> -> <netinet/ip_icmp.h>;
	struct icmphdr -> struct icmp;
	Remove macro hacks to cope with old headers.
	(pinger_wrapper): Take and return void *, so we're a cthread_fn_t.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* portinfo.c (hold): Declare explicit `int' to silence warning.

	* Makefile (OBJS): Use pattern %.sh instead of explicit list.

Fri Aug 21 19:25:12 1998  Jose M. Moya  <josem@gnu.org>

	* msgport.c: Comments added.
	(add_cmd): cmd_add renamed to add_cmd.
	(parse_cmd_opt): cmd_parse_opt renamed to parse_cmd_opt.

Mon Aug  3 17:10:05 1998  Joel N. Weber II  <devnull@theobromine.ai.mit.edu>

	* Makefile (msgport): Add dependency on libshouldbeinlibc.

1998-07-25  Jose M. Moya  <josem@gnu.org>

	* msgport.c: Fixed to deallocate ports.
