@@ -1,5 +1,8 @@
 Fri Feb 19 02:43:11 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
+	* login.c (main): Correctly implement -f instead of always
+	acting as if it were set.
+	
 	* login.c (main): When transitioning from no UID's to having UID's
 	create a new session like normal.  Reported by Mark M. Kettenis
 	<kettenis@wins.uva.nl>. 
